--- a/product/product.html
+++ b/product/product.html
@@ -11,7 +11,7 @@
         text-align:center;;
 }
 
-#id1 {
+    #id1 {
   background-size: cover;
 }
    
@@ -73,6 +73,20 @@
    .birds > div {
        text-align: center;
    }
+   .parent {
+                height: 100%;
+                width: 100%;
+            }
+    .parent > div {
+                width: 31%;
+                height: 31%;
+                float: left;
+                padding: 10px;
+        }
+    .parent > div > p {
+                text-align: left;
+        
+            }
   
 
     </style>
