--- a/get_started/get_started.html
+++ b/get_started/get_started.html
@@ -23,7 +23,7 @@
          .nav_right{
              display: flex;
              float: right;
-             padding-right: 10%;
+             padding-right: 4%;
              padding-top: 1%;
            
          }
@@ -36,13 +36,15 @@
          .nav_right>div:last-child{
              margin: 0%;
          }
-         .nav_right button{
+         #get_start{
              background-color: #00d586;
              color: white;
              width: 150px;
              height: 35px;
              font-size: 17px;
              border-radius: 15px;
+             padding-top: 6px;
+             text-align: center;
              border: 1px solid #00d586;
          }
          .nav_right a{
@@ -156,7 +158,7 @@
                 <div><a href="http://">Privacy</a></div>
                 <div><a href="http://">Academy</a></div>
                 <div><a href="http://">Login</a></div>
-                <div><button>Get Started</button></div>
+                <a id="get_start" href="http://127.0.0.1:5500/get_started/get_started.html"><div>Get Started</div></a>
             </div>
 
             <div style="clear: both;" class="nav_bottom">
