--- a/get_started/get_started.html
+++ b/get_started/get_started.html
@@ -156,8 +156,8 @@
                 <div><a href="http://127.0.0.1:5500/pricing/pricing.html">Pricing</a></div>
                 <div><a href="http://127.0.0.1:5500/customers/customers.html">Customers</a></div>
                 <div><a href="http://">Privacy</a></div>
-                <div><a href="http://">Academy</a></div>
-                <div><a href="http://">Login</a></div>
+                <div><a href="http://127.0.0.1:5500/Academy/academy.html">Academy</a></div>
+                <div><a href="http://127.0.0.1:5500/login/login.html">Login</a></div>
                 <a id="get_start" href="http://127.0.0.1:5500/get_started/get_started.html"><div>Get Started</div></a>
             </div>
 
