--- a/customers/customers.html
+++ b/customers/customers.html
@@ -39,7 +39,7 @@
             #nav_bar{
               width: 100%;
               height: 105px;
-              padding: 2% 0% 6%;
+              padding: 2% 0% 0%;
               position: fixed;
               background-color: white;
             
@@ -388,12 +388,12 @@
         </div>
         <div class="customer3_4">
             <div>
-                <a href="read story">Read Their Story</a>
+                <a href="file:///C:/Users/asd/Desktop/third/Leadiq/customers/tripactions.html ">Read Their Story</a>
             </div>
         </div>       
         <div class="customer3_4_4">
             <div>
-                <a href="read story">Read Their Story</a>
+                <a href="file:///C:/Users/asd/Desktop/third/Leadiq/customers/videolicous.html">Read Their Story</a>
             </div>
         </div>     
         <div class="customer3_5">
@@ -440,12 +440,12 @@
         </div>
         <div class="customer3_8">
             <div>
-                <a href="read story">Read Their Story</a>
+                <a href="file:///C:/Users/asd/Desktop/third/Leadiq/customers/credly.html">Read Their Story</a>
             </div>
         </div>  
         <div class="customer3_8_8">
             <div>
-                <a href="read story">Read Their Story</a>
+                <a href="file:///C:/Users/asd/Desktop/third/Leadiq/customers/cien.html">Read Their Story</a>
             </div>
         </div>   
 
