--- a/login/login.html
+++ b/login/login.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <style>
+        body {
+            background-color:rgb(2, 128, 44);
+        }
        .logo {
           float:left;
           margin:2% 4%;
@@ -87,7 +90,7 @@
                 <br>
                 <br>
                 <a href="https://accounts.google.com/o/oauth2/v2/auth/oauthchooseaccount?include_granted_scopes=true&nonce=ea73886d0ffa4ec0a7702ed1ef496b54&state=eyJyZWRpcmVjdFVyaSI6Imh0dHBzOi8vYWNjb3VudC5sZWFkaXEuY29tL2FwcC9zaWduaW4vIiwiYWZmaWxpYXRpb24iOiJMZWFkSVEiLCJzZXNzaW9uVG9rZW4iOiJhOTI0YTE2OWFhOTA0YjM5OTQzNWQ3MzMxOGUwMzc5YSIsIm5vbmNlIjoiZWE3Mzg4NmQwZmZhNGVjMGE3NzAyZWQxZWY0OTZiNTQifQ%3D%3D&scope=openid%20email%20profile&redirect_uri=https%3A%2F%2Fintegrations.leadiq.com%2Fv2%2Fgoogle%2Fidentity%2Fcallback&client_id=265431267172-gs50ilbvc8f9d0uhp82l0rmj51f0hs0b.apps.googleusercontent.com&response_type=code&flowName=GeneralOAuthFlow">
-                    <img style = "width:140px;height:45px;padding-left: 14%;" src="https://account.leadiq.com/common/img/google-sign-in-2x.56f00e35.png" alt=""></a>
+                    <img style = "width:250px;height:62px;padding-left: 7%;" src="https://account.leadiq.com/common/img/google-sign-in-2x.56f00e35.png" alt=""></a>
                     <br>
                     
                     <p>OR</p>      
