--- a/product/product.html
+++ b/product/product.html
@@ -145,6 +145,26 @@
     .contact-info > div {
         flex-basis:50%;
     }
+    #cont_9>a>div{
+            background-color: #00d586;
+             height: 60px;
+             width: 270px;
+             font-size: 25px;
+             border-radius: 30px;
+             padding-top: 15px;
+             color: #ffffff;
+             word-wrap: normal;
+             font-family: Vusemod, sans-serif; 
+             margin: auto;
+         }
+         #cont_9{
+             text-align: center;
+             margin-top: 7vw;
+             font-size: 20px;
+             font-family: Vusemod, sans-serif; 
+             color: #063c4d;
+             line-height: 30px
+         }
     
     .collaborate-page {
         display:flex;
@@ -308,6 +328,7 @@
         <br>
 
         <div><h1>Contact Info You Can Trust <br> </h1>
+            <br>
         <p>We're constantly working to improve our contact data<br> That means you can prospect without worry. Our verified <br> emails have a greater than 90% success rate</p>
         <br>
         <br>
@@ -364,14 +385,13 @@
         </div>
     </div>   
 
-    <div class = "birds">
-        <div><h1>Bird's Eye View of Sales</h1>
-            <br>
-            <p>Besides improving the speed of your sales reps, our second passion is making sure that management has 
-                the most insight possible into the activities that your sales team is involved in. What countries are they prospecting? What seniority? Who is the most active? </p>
-               <br>
-            <a style="padding-left: 10%;"   href="http://127.0.0.1:5500/get_started/get_started.html"><div>Get Started</div></a>
-        </div>
+    
+    <div id="cont_9">
+        <h2>Bird's Eye View of Sales</h2><br>
+        <p>Besides improving the speed of your sales reps, our second passion is making sure that<br> management has 
+            the most insight possible into the activities that your sales team is<br> involved in. What countries are they prospecting? What seniority? </p><br>
+
+        <a href="http://127.0.0.1:5500/get_started/get_started.html"><div>Get Started</div></a>
     </div>
 
     <div id="footer">
