--- a/customers/credly.html
+++ b/customers/credly.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <style type="text/css">
+*{
+                padding: 0%;
+                margin: 0%;
+                box-sizing: border-box;
+            }
 #nav_bar{
               width: 100%;
               height: 105px;
@@ -254,7 +259,7 @@
     </div>
     <div class="four">
         <div class="fourimg">
-            <img src="../../third image/LeadIQ - Customer Stories_files/Small-Vertical-Line.svg" width="160px" height="180px">
+            <img src="https://leadiq.com/images/Small-Vertical-Line.svg" width="160px" height="180px">
             
         </div>
         <div class="fourpara">
@@ -301,7 +306,7 @@
     </div>
     <div class="eight">
         <div class="eightimg">
-            <img src="../../third image/LeadIQ - Customer Stories_files/Small-Vertical-Line.svg" width="160px" height="180px">
+            <img src="https://leadiq.com/images/Small-Vertical-Line.svg" width="160px" height="180px">
             
         </div>
         <div class="eightpara">
