--- a/get_started/get_started.html
+++ b/get_started/get_started.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             *{
                 padding: 0%;
@@ -122,7 +123,7 @@
         form>input,select{
             border:1px solid skyblue;
             width: 100%;
-            height: 3vw;
+            height: 35px;
             margin-top: 5px;
             margin-bottom: 15px;
             background: rgb(231, 237, 240);
@@ -132,7 +133,7 @@
         button{
             background-color: #00d586;
             border: #00d586;
-            height: 3vw;
+            height: 35px;
             width: 100px;
             font-family: Vusemod, sans-serif;
             font-size: 15px;
