--- a/customers/customers.html
+++ b/customers/customers.html
@@ -589,7 +589,7 @@
     <div id="footer">
         <div class="footer_div">
             <div>
-                <a href="http://"><img src="https://leadiq.com/images/leadIQ.svg" alt=""></a><br><br>
+                <a href=""><img src="https://leadiq.com/images/leadIQ.svg" alt=""></a><br><br>
                 <p>1-888-6LEADIQ</p>
                 <p>(1-888-653-2347)</p>
                 <p>support@leadiq.com</p><br>
@@ -607,6 +607,7 @@
                 <a href="#">Security</a ><br>
             </div>
             <div>
+                
                 <p id="blogs">Recent Blogs</p>
                 <a href="#">How to Get Prospects to Accept Your LinkedIn Connection Request</a><br>
                 <a href="#">Why Sales Reps Should Stop Introducing Yourself in Cold Emails</a><br>
